# riscv_extensions

./: .gitignore  README.md  _tmp_gt.mlir  _tmp_sw.mlir  indices.desc  requirements.txt  sweep_demo.csv  sweep_demo.md
backends/rocc/: CMakeLists.txt
backends/rocc/bench/: issue_spdot.c
backends/rocc/include/: sparse_attention_rocc.h
backends/rocc/src/: sparse_attention_rocc.c
backends/rvv/: CMakeLists.txt  README.md
backends/rvv/bench/: compare_blocktopk_ref.c  compare_blocktopk_tiled_ref.c  compare_lsh_ref.c  compare_lsh_tiled_ref.c  compare_nm_ref.c  compare_sw_ref.c  compare_sw_tiled_ref.c  measure_cycles.c  measure_cycles_blocktopk.c  measure_cycles_cli.c  rvv_runner.c  test_helpers.c
backends/rvv/include/: rvv_compat.h  sparse_attention_rvv.h
backends/rvv/src/: sparse_attention_rvv.c
backends/rvv/tests/: test_blocktopk_ref.py  test_blocktopk_tiled_ref.py  test_lsh_ref.py  test_nm_ref.py  test_qemu_runner.py  test_qemu_smoke.py  test_quant_blg.py  test_quant_sw.py  test_runner_nm_lsh.py  test_runner_sw_tiled.py  test_rvv_helpers.py  test_sw_ref.py  test_sw_tiled_ref.py
backends/rvv/toolchains/: linux-gnu-rvv-clang.cmake  linux-gnu-rvv.cmake
bench/autotune/: autotune_sparse_attention.py
bench/configs/: llm_small_2k.yaml  llm_small_32k.yaml  llm_small_8k.yaml  vit_block_2k.yaml  vit_block_32k.yaml  vit_block_8k.yaml
bench/eval/: README.md  eval_sparse_attention.py
bench/scripts/: perf_sparse_attention.py
compiler/mlir/: BUILD.md  CMakeLists.txt
compiler/mlir/dialect/: SattnOps.td
compiler/mlir/examples/: sattn_example.mlir  sattn_example_rvv.mlir
compiler/mlir/tests/: _probe_blg.mlir  _tmp_attrs.mlir  _tmp_blg.mlir  _tmp_blg_roundtrip.mlir  _tmp_calib.mlir  _tmp_gqa_comp.mlir  _tmp_hw_probe_rvv.mlir  _tmp_hw_probe_rvv.mlir.rvv.mlir  _tmp_hw_probe_sim.mlir  _tmp_lsh.mlir  _tmp_nm.mlir  _tmp_override.mlir  _tmp_per_spec_rvv.mlir.rvv.mlir  _tmp_prof.mlir.rvv.mlir  _tmp_rocc_cpu_mlir.mlir  _tmp_rocc_gt.mlir  _tmp_rocc_input.mlir  _tmp_rocc_invar.mlir  _tmp_rocc_tile_input.mlir  _tmp_rvv_autotune.mlir  _tmp_rvv_autotune.mlir.rvv.mlir  _tmp_rvv_dilated.mlir  _tmp_rvv_dilated.mlir.rvv.mlir  _tmp_rvv_gqa_comp.mlir  _tmp_rvv_gqa_comp.mlir.rvv.mlir  _tmp_rvv_indices.mlir  _tmp_rvv_indices.mlir.rvv.mlir  _tmp_rvv_input.mlir  _tmp_rvv_landmark.mlir  _tmp_rvv_landmark.mlir.rvv.mlir  _tmp_rvv_quant.mlir  _tmp_rvv_quant.mlir.rvv.mlir  _tmp_rvv_run.mlir  _tmp_rvv_run.mlir.rvv.mlir  _tmp_scale.mlir  _tmp_scale_d.mlir  _tmp_select_fc.mlir  _tmp_select_hw.mlir  _tmp_select_spec.mlir  _tmp_specs.mlir  (+42 more)
compiler/mlir/tools/: README.md  _debug_parse.py  sattn_calibrate_scales.py  sattn_compile_and_sim.py  sattn_emit_artifacts.py  sattn_emit_desc_txt.py  sattn_emit_indices_txt.py  sattn_emit_rocc.py  sattn_emit_rvv.py  sattn_opt.py  sattn_run_rvv_from_mlir.py
compiler/mlir/tools/sattn-opt/: CMakeLists.txt  main.cpp
compiler/mlir/transforms/: Bufferize.cpp  CMakeLists.txt  FuseSoftmax.cpp  LowerToRVV.cpp  LowerToRoCC.cpp  MaterializeIndices.cpp  Passes.cpp  Passes.h  README.md  SelectSpec.cpp  Tile.cpp  Vectorize.cpp
docker/: Dockerfile  docker-compose.yml
docs/: dev_setup.md  profiles.md  roadmap.md  scope_decisions.md  spec_selection.md
docs/api/: shapes_and_contract.md
docs/benchmarks/: mini_benchmarks.md
examples/: quickstart.py
hw/rtl/: README.md  gather2d_stub.sv  idx_ram.sv  rocc_sattn.sv  softmax_fused_stub.sv  spad.sv  spdot_bsr_core.sv  spmm_bsr_stub.sv
hw/runtime/: README.md  rocc_driver.h
hw/sim/: README.md  run_from_mlir.py  verilator_tb.cpp
hw/spec/: cycle_model.py  primitives.md  rocc_intrinsics.h
imc/neurosim/: README.md  mapping.py
ops/sparse_attention/cpu/: __init__.py  python_ref.py
ops/sparse_attention/gpu/: __init__.py  block_topk_torch.py  triton_block_topk.py  triton_kernels.py
python/: pyproject.toml
python/sattn/: README.md  __init__.py
runtime/api/cpp/: sparse_attention.h
runtime/api/python/: __init__.py  sparse_attention.py
scripts/: build_and_run_rvv_qemu.py  docker_prune.py  run_all_tests.py  rvv_autotune_sweep.py  rvv_util_sweep.py  sattn_profile.py  update_rvv_metrics_table.py
tests/: test_sparse_attention_cpu.py  test_sparse_attention_gpu.py  test_sparse_attention_randomized.py
