[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sattn"
version = "0.0.1"
description = "Sparse attention tooling: MLIR-to-RVV/Sim wrappers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="Tejas Shirodkar"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["sattn*"]


